--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -74,7 +74,7 @@
               {% endif %} {% endfor %} {% endif %}
             </div>
             <div class="d-flex justify-content-end">
-              <input type="submit" value="register" class="btn btn-primary" />
+              <input type="submit" value="Register" class="btn btn-primary" />
             </div>
           </form>
           {% endwith %}
@@ -116,7 +116,7 @@
               {% endif %} {% endfor %} {% endif %}
             </div>
             <div class="d-flex justify-content-end">
-              <input type="submit" value="login" class="btn btn-primary" />
+              <input type="submit" value="Login" class="btn btn-primary" />
             </div>
           </form>
           {% endwith %}
