--- a/flask_app/templates/dashboard.html
+++ b/flask_app/templates/dashboard.html
@@ -1,3 +1,4 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %} {% block title %} Dashboard {% endblock title %} {%
+block content %}
 <h3>Hello {{session.first_name}}!</h3>
 {% endblock %}
