--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %}{% block content %}
+{% extends 'base.html' %} {% block title %} Login and Registration {% endblock
+%} {% block content %}
 <div class="container">
   <div class="row mt-3">
     <div class="col">
